Change several lines to Java 17 styles